; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_lib576.c_test.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_lib576.c_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLE_OK = common dso_local global i32 0, align 4
@CURL_GLOBAL_ALL = common dso_local global i32 0, align 4
@CURLE_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@CURLOPT_URL = common dso_local global i32 0, align 4
@CURLOPT_WILDCARDMATCH = common dso_local global i32 0, align 4
@CURLOPT_CHUNK_BGN_FUNCTION = common dso_local global i32 0, align 4
@chunk_bgn = common dso_local global i8* null, align 8
@CURLOPT_CHUNK_END_FUNCTION = common dso_local global i32 0, align 4
@chunk_end = common dso_local global i8* null, align 8
@CURLOPT_CHUNK_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8, align 1
  store i8* %0, i8** %2, align 8
  store i32* null, i32** %3, align 8
  %6 = load i32, i32* @CURLE_OK, align 4
  store i32 %6, i32* %4, align 4
  store i8 0, i8* %5, align 1
  %7 = load i32, i32* @CURL_GLOBAL_ALL, align 4
  %8 = call i32 @curl_global_init(i32 %7)
  %9 = call i32* (...) @curl_easy_init()
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @CURLE_OUT_OF_MEMORY, align 4
  store i32 %13, i32* %4, align 4
  br label %35

14:                                               ; preds = %1
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @CURLOPT_URL, align 4
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 (i32*, i32, ...) @test_setopt(i32* %15, i32 %16, i8* %17)
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* @CURLOPT_WILDCARDMATCH, align 4
  %21 = call i32 (i32*, i32, ...) @test_setopt(i32* %19, i32 %20, i64 1)
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* @CURLOPT_CHUNK_BGN_FUNCTION, align 4
  %24 = load i8*, i8** @chunk_bgn, align 8
  %25 = call i32 (i32*, i32, ...) @test_setopt(i32* %22, i32 %23, i8* %24)
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* @CURLOPT_CHUNK_END_FUNCTION, align 4
  %28 = load i8*, i8** @chunk_end, align 8
  %29 = call i32 (i32*, i32, ...) @test_setopt(i32* %26, i32 %27, i8* %28)
  %30 = load i32*, i32** %3, align 8
  %31 = load i32, i32* @CURLOPT_CHUNK_DATA, align 4
  %32 = call i32 (i32*, i32, ...) @test_setopt(i32* %30, i32 %31, i8* %5)
  %33 = load i32*, i32** %3, align 8
  %34 = call i32 @curl_easy_perform(i32* %33)
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %14, %12
  %36 = load i32*, i32** %3, align 8
  %37 = icmp ne i32* %36, null
  br i1 %37, label %38, label %41

38:                                               ; preds = %35
  %39 = load i32*, i32** %3, align 8
  %40 = call i32 @curl_easy_cleanup(i32* %39)
  br label %41

41:                                               ; preds = %38, %35
  %42 = call i32 (...) @curl_global_cleanup()
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i32 @curl_global_init(i32) #1

declare dso_local i32* @curl_easy_init(...) #1

declare dso_local i32 @test_setopt(i32*, i32, ...) #1

declare dso_local i32 @curl_easy_perform(i32*) #1

declare dso_local i32 @curl_easy_cleanup(i32*) #1

declare dso_local i32 @curl_global_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
